@@ -46,6 +46,9 @@ Revision history for Perl extension Module::Build.
  - We now memoize the output of the internal _default_INC() method,
    since it uses backticks and might be kind of slow.
 
+ - When processing XS files, we now look for a typemap in lib/ as well
+   as using the system's default typemap. [John Peacock]
+
 0.27_01 (Beta for 0.28)  Fri Apr 15 21:12:57 CDT 2005
 
  Backward-incompatible (but better) changes:
